spec/compile_errors/duplicate.cr
require "../../src/hardwire"

class SpecialService
end

class Container
  include HardWire::Container

  singleton SpecialService
  singleton SpecialService
end

